# splunk-mcp-server

./: .gitignore  DOCKER.md  README.md  pyproject.toml  run.sh
.claude/: settings.local.json
docker/: .dockerignore  Dockerfile  docker-compose.yml
resources/: .env.example
src/: __init__.py  main.py
src/client/: __init__.py  splunk_client.py
src/mcp_tools/: __init__.py  alerts.py  analysis.py  search.py
src/tools/: apps.py  events.py  indexes.py
